--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ styles: [agate, androidstudio, arta, asceti, atelier-cave.dark, atelier-cave.lig
 exclude: ["README.md", "README.html"]
 
 # Build settings
-highlighter: idea
+highlighter: rouge
 markdown: kramdown
